--- a/expenses-frontend/package.json
+++ b/expenses-frontend/package.json
@@ -19,9 +19,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-paginate": "^8.1.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-select-search": "^3.0.9",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
