added currencies types

--- a/expenses-backend/.env
+++ b/expenses-backend/.env
@@ -3,5 +3,6 @@ MONGO_URI=mongodb+srv://reactor:XbnFMAPkjFqy586tC3sEhvV6xVMQQY@cluster0.c15tx.mo
 JWT_SECRET_KEY=8KhUj+\z2=TY+v;*Pu%!<sxhL
 JWT_LIFETIME=30d
 COMPANY_ID=62409f9a01b8a89bc1558952
-CERTIFICATE_PATH=/root/project/expenses-crm/expenses-backend/ssl-bundle.crt
-CERTIFICATE_KEY_PATH=/root/project/expenses-crm/expenses-backend/ssl-private-key.key
+CERTIFICATE_PATH=ssl-bundle.crt
+CERTIFICATE_KEY_PATH=ssl-private-key.key
+DEV=true
